Finished customer controller
Finished the customer controller and add method find by email

--- a/api-senna-connect-ar/src/main/resources/application.properties
+++ b/api-senna-connect-ar/src/main/resources/application.properties
@@ -4,4 +4,6 @@ spring.datasource.url= ${DB_URL}
 spring.datasource.username=${DB_USER_NAME}
 spring.datasource.password=${DB_PASSWORD}
 
+
 server.port=8080
+debug= true
